# FdR-groupW

./: CMakeLists.txt  README.md  package.xml
docs/: Doxyfile  refman.toc  task__planner_8cpp.tex  task__planner_8h__incl.md5  trajectory__planner_8cpp.tex  trajectory__planner_8cpp__incl.md5  trajectory__planner_8h.tex  ur5Jac_8h.tex  utils_8h.tex  utils_8h__dep__incl.md5  utils_8h__incl.md5
docs/html/: annotated.html  annotated_dup.js  classPos__manager-members.html  classPos__manager.html  classPos__manager.js  classes.html  classimage__processor_1_1PoseEstimator-members.html  classimage__processor_1_1PoseEstimator.html  classimage__processor_1_1PoseEstimator.js  classimage__processor_1_1imageProcessor-members.html  classimage__processor_1_1imageProcessor.html  classimage__processor_1_1imageProcessor.js  collision__handler_8cpp.html  collision__handler_8cpp.js  collision__handler_8cpp__incl.map  collision__handler_8cpp__incl.md5  collision__handler_8h.html  collision__handler_8h.js  collision__handler_8h__dep__incl.map  collision__handler_8h__dep__incl.md5  collision__handler_8h__incl.map  collision__handler_8h__incl.md5  collision__handler_8h_source.html  dir_000001_000000.html  dir_000003_000000.html  dir_000004_000000.html  dir_0369b491168ae20f6fc9d8374e9cb0bc.html  dir_0369b491168ae20f6fc9d8374e9cb0bc.js  dir_0369b491168ae20f6fc9d8374e9cb0bc_dep.map  dir_0369b491168ae20f6fc9d8374e9cb0bc_dep.md5  dir_1d578ac14ad553d24cb3d798c7a4446a.html  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  files_dup.js  (+110 more)
docs/latex/: annotated.tex  classPos__manager.tex  classimage__processor_1_1PoseEstimator.tex  files.tex  (+57 more)
include/: collision_handler.h  invDiffKinematicControlSimCompleteAngleAxis.h  invDirKinematics.h  motion_processor.h  p2pMotionPlan.h  pos_manager.h  task_planner.h  trajectory_planner.h  ur5Jac.h  utils.h
kinematic_libs/: invDiffKinematicControlSimCompleteAngleAxis.cpp  invDirKinematics.cpp  p2pMotionPlan.cpp  ur5Jac.cpp
msg/: ImageData.msg  RobotInstructions.msg
scripts/: image_processor.py
src/: collision_handler.cpp  motion_processor.cpp  pos_manager.cpp  task_planner.cpp  trajectory_planner.cpp  utils.cpp
(+101 files in other folders)
