<?xml version="1.0"?>
<package format="2">
  <name>lab_group_w</name>
  <version>0.0.0</version>
  <description>Colleciton of scripts for group_w's lab</description>

  <maintainer email="sergio.brodesco@todo.todo">sbrodesco</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>
</package>
